renombrado de variables

--- a/Clase_1/callbacks.ipynb
+++ b/Clase_1/callbacks.ipynb
@@ -67,7 +67,7 @@
    "outputs": [],
    "source": [
     "# heredamos de la clase `Callback` de keras\n",
-    "class CallbackPenguin(tf.keras.callbacks.Callback):\n",
+    "class MiCallback(tf.keras.callbacks.Callback):\n",
     "    def on_epoch_end(self, epoch, logs={}):\n",
     "        if logs.get('accuracy') > 0.7:\n",
     "            print('\\nEl modelo ha llegado a 70% de precisión, terminando entrenamiento')\n",
@@ -200,9 +200,9 @@
    },
    "outputs": [],
    "source": [
-    "callback_penguin = CallbackPenguin()\n",
+    "mi_callback = MiCallback()\n",
     "\n",
-    "model.fit(train_images, train_labels, epochs=50, callbacks=[callback_penguin])"
+    "model.fit(train_images, train_labels, epochs=50, callbacks=[mi_callback])"
    ]
   },
   {
